--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,85 @@
-# fastapi
-fastapi[standard]==0.115.11
-uvicorn[standard]==0.34.0 # To run ASGI server (standard: include websockets)
-orjson==3.10.7
-
-
-# for making requests
-requests==2.32.3
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.11.0
+attrs==25.3.0
+billiard==4.2.2
+celery==5.5.3
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.3.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+dataclasses-json==0.6.7
+dnspython==2.8.0
+email-validator==2.3.0
+faiss-cpu==1.11.0
+fastapi==0.115.11
+fastapi-cli==0.0.13
+fastapi-cloud-cli==0.3.0
+frozenlist==1.7.0
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
 httpx==0.28.1
-
-# settings and dataclasses
+httpx-sse==0.4.1
+idna==3.10
+Jinja2==3.1.6
+jsonpatch==1.33
+jsonpointer==3.0.0
+kombu==5.5.4
+langchain==0.3.27
+langchain-community==0.3.27
+langchain-core==0.3.77
+langchain-text-splitters==0.3.11
+langsmith==0.4.32
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+marshmallow==3.26.1
+mdurl==0.1.2
+multidict==6.6.4
+mypy_extensions==1.1.0
+numpy==2.3.3
+orjson==3.10.7
+packaging==25.0
+prompt_toolkit==3.0.52
+propcache==0.3.2
 pydantic==2.11.3
 pydantic-settings==2.8.1
-pydantic-core==2.33.1
+pydantic_core==2.33.1
+Pygments==2.19.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-
-# database
-sqlalchemy==2.0.38
-
-# Vector database
-langchain-community==0.3.27
-faiss-cpu==1.11.0
+python-multipart==0.0.20
+PyYAML==6.0.3
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==14.1.0
+rich-toolkit==0.15.1
+rignore==0.7.0
+sentry-sdk==2.39.0
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.38
+sqlmodel==0.0.25
+starlette==0.46.2
+tenacity==9.1.2
+typer==0.19.2
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.34.0
+uvloop==0.21.0
+vine==5.1.0
+watchfiles==1.1.0
+wcwidth==0.2.14
+websockets==15.0.1
+yarl==1.20.1
+zstandard==0.25.0
